--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "oimo": "^1.0.9",
     "rxjs": "~7.4.0",
     "three": "^0.148.0",
     "tslib": "^2.3.0",
